Fix build errors from last upstream merge